--- a/01.NodeJS-fundamentals/notes-node/package.json
+++ b/01.NodeJS-fundamentals/notes-node/package.json
@@ -9,6 +9,7 @@
   "author": "agungTuanany",
   "license": "MIT",
   "dependencies": {
-    "lodash": "^4.17.5"
+    "lodash": "^4.17.5",
+    "yargs": "^11.0.0"
   }
 }
