--- a/02.Aysnc-NodeJS-Weather-App/weather-app/package.json
+++ b/02.Aysnc-NodeJS-Weather-App/weather-app/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "request": "^2.85.0"
+    "request": "^2.85.0",
+    "yargs": "^11.0.0"
   }
 }
