--- a/03.Web-Servers-and-Application-Deployment/package.json
+++ b/03.Web-Servers-and-Application-Deployment/package.json
@@ -1,14 +1,16 @@
 {
   "name": "03.web-servers-and-application-deployment",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.3"
-  }
+    "express": "^4.16.3",
+    "hbs": "^4.0.1"
+  },
+  "description": ""
 }
