Setup deploy and heroku port

--- a/03.Web-Servers-and-Application-Deployment/package.json
+++ b/03.Web-Servers-and-Application-Deployment/package.json
@@ -12,5 +12,9 @@
     "express": "^4.16.3",
     "hbs": "^4.0.1"
   },
+  "engines": {
+    "node": "8.11.1",
+    "npm": "5.6.x"
+  },
   "description": ""
 }
