--- a/05.MongoDB-Mongoose-and-REST-API(TODO-API)/node-todo-api/package.json
+++ b/05.MongoDB-Mongoose-and-REST-API(TODO-API)/node-todo-api/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "mongodb": "^3.0.7"
+    "mongodb": "^3.0.7",
+    "mongoose": "^5.0.16"
   }
 }
