--- a/05.MongoDB-Mongoose-and-REST-API(TODO-API)/node-todo-api/package.json
+++ b/05.MongoDB-Mongoose-and-REST-API(TODO-API)/node-todo-api/package.json
@@ -4,8 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node server/server.js",
     "test": "mocha server/**/*.test.js",
     "test-watch": "nodemon --exec \"npm test\""
+  },
+  "engine":{
+      "node": "8.11.1",
+      "npm": "5.8.x"
   },
   "keywords": [],
   "author": "",
