--- a/05.MongoDB-Mongoose-and-REST-API(TODO-API)/node-todo-api/package.json
+++ b/05.MongoDB-Mongoose-and-REST-API(TODO-API)/node-todo-api/package.json
@@ -8,9 +8,9 @@
     "test": "mocha server/**/*.test.js",
     "test-watch": "nodemon --exec \"npm test\""
   },
-  "engine":{
-      "node": "8.11.1",
-      "npm": "5.8.x"
+  "engine": {
+    "node": "8.11.1",
+    "npm": "5.8.x"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +18,7 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
+    "lodash": "^4.17.10",
     "mongodb": "^3.0.7",
     "mongoose": "^5.0.16"
   },
