--- a/05.MongoDB-Mongoose-and-REST-API(TODO-API)/node-todo-api/package.json
+++ b/05.MongoDB-Mongoose-and-REST-API(TODO-API)/node-todo-api/package.json
@@ -12,7 +12,7 @@
     "node": "8.11.1",
     "npm": "5.8.x"
   },
-  "keywords":"",
+  "keywords": "",
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -20,7 +20,8 @@
     "express": "^4.16.3",
     "lodash": "^4.17.10",
     "mongodb": "^3.0.7",
-    "mongoose": "^5.0.16"
+    "mongoose": "^5.0.16",
+    "validator": "^9.4.1"
   },
   "devDependencies": {
     "expect": "^1.4.3",
